@@ -14,6 +14,7 @@ squid3 (3.3.3-1) UNRELEASED; urgency=low
     - Enabled ECAP support
     - Fixed configure invocation to match new syntax
     - Removed unneeded rename of helper man pages
+    - Fixed list of helpers to build
 
   * debian/watch
     - Updated for 3.3
